// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Virtual agent UI Closes on button click 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; right: 0px; z-index: 800; display: flex; flex-direction: column; min-width: 20rem; min-height: 50rem;"
  >
    <dialog
      class="virtualAgentDialog"
    >
      <div
        style="display: flex; flex: 1; height: 100%; flex-direction: column; border-radius: inherit;"
      >
        <header
          style="background: red; width: 100%; border-top-left-radius: inherit; border-top-right-radius: inherit; text-align: center;"
        >
          <h1>
            test
          </h1>
        </header>
        <div
          style="flex: 1; background: blue; border-bottom-left-radius: inherit; border-bottom-right-radius: inherit;"
        >
          Coucou
        </div>
      </div>
    </dialog>
    <button>
      Ouvrir
    </button>
  </div>
</DocumentFragment>
`;

exports[`Virtual agent UI Is open by default 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; right: 0px; z-index: 800; display: flex; flex-direction: column; min-width: 20rem; min-height: 50rem;"
  >
    <dialog
      class="virtualAgentDialog"
      open=""
    >
      <div
        style="display: flex; flex: 1; height: 100%; flex-direction: column; border-radius: inherit;"
      >
        <header
          style="background: red; width: 100%; border-top-left-radius: inherit; border-top-right-radius: inherit; text-align: center;"
        >
          <h1>
            test
          </h1>
        </header>
        <div
          style="flex: 1; background: blue; border-bottom-left-radius: inherit; border-bottom-right-radius: inherit;"
        >
          Coucou
        </div>
      </div>
    </dialog>
    <button>
      Ouvrir
    </button>
  </div>
</DocumentFragment>
`;
